Cmd_Take usb camera PHOTO, which returns link at timestamped.jpg
