# app.py
@@ -7,6 +7,8 @@ import config
 
 from connexion import NoContent
 from commands import cmd_Get_Date_Time, cmd_Get_PIB, cmd_Paper_Move, cmd_Get_Status, cmd_Get_Tax, cmd_Get_Diag,cmd_report_ART_All
+from commands import cmd_take_photo
+from flask import Flask, request
 import orm
 if config.sim:
     """
@@ -40,7 +42,10 @@ def g16_cmd():
 def g17_cmd():
     output = cmd_report_ART_All()
     return output
-
+def g21_cmd():
+    output = cmd_take_photo()
+    b_url = request.base_url.strip("g21_cmd")
+    return b_url + output
 
 def post_greeting(name: str) -> str:
     return 'Hello {name}'.format(name=name)
